blockml/test/errors/03_view/e211/e211.view
view: e211
table: 1
udfs: abc   
fields:
- dimension: dim1
  sql: 111



